--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -59,10 +59,10 @@
 
       <div [ngSwitch]="kycStatus" *ngIf="quberaBalance.length < 1">
         <div class="qubera-btn-wr" *ngSwitchCase="'SUCCESS'">
-            <button class="btn btn--active balance__title-btn" (click)="createCurrency.emit(true)" *ngIf="quberaBalance.length < 1">{{'Create currency' | translate}}</button>
+            <button class="btn btn--active balance__title-btn" (click)="createCurrency.emit(true)" *ngIf="quberaBalance.length < 1">{{'Create Account' | translate}}</button>
         </div>
         <div class="qubera-btn-wr" *ngSwitchCase="'Failed'">
-          <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Create KYC' | translate}}</button>
+          <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Proceed Verification' | translate}}</button>
         </div>
         <!-- если заявка на подтверждении -->
 
@@ -87,7 +87,7 @@
         </div>
 
         <div class="qubera-btn-wr" *ngSwitchDefault>
-          <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Create KYC' | translate}}</button>
+          <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Proceed Verification' | translate}}</button>
         </div>
       <!-- end 'если заявка на подтверждении' -->
       </div>
