--- a/src/assets/scss/pages/fiat/_fiat-fs.scss
+++ b/src/assets/scss/pages/fiat/_fiat-fs.scss
@@ -601,7 +601,7 @@
 		.left-part{
 			max-width: 370px;
 			width: 100%;
-			margin-right: 30px;
+			margin: 0 auto;
 			@media(max-width: 640px){
 				max-width: unset;
 				margin-right: 0;
@@ -645,7 +645,7 @@
 			border: none;
 			background: transparent;
 			text-align: left;
-			align-self: flex-start;
+			align-self: center;
 			svg{
 				margin-right: 10px;
 				vertical-align: middle;
