--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -151,7 +151,6 @@
             {{'address' | translate}}
           </label>
           <div class="wrap-input__line"></div>
-          <!--Input error section starts-->
           <div
             class="input-hint-wrapper"
             *ngIf="(!form.controls['address'].valid &&
@@ -161,8 +160,18 @@
               {{'Set merchant address for withdrawal' | translate}}
             </span>
           </div>
-          <!--Input error section ends-->
         </div>
+
+
+
+        <!-- if qubera -->
+        <div class="notice-for-withdraw">
+          <p>Funds will be transferred to your personal account</p>
+        </div>
+        <!-- end if qubera -->
+
+
+
 
 
       </div>
