--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -165,9 +165,9 @@
 
 
         <!-- if qubera -->
-        <div class="notice-for-withdraw">
+        <!-- <div class="notice-for-withdraw">
           <p>Funds will be transferred to your personal account</p>
-        </div>
+        </div> -->
         <!-- end if qubera -->
 
 
