add step three, change logic refill for qubera, change some logic for qubera balance buttons & work create fug flow

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -343,6 +343,7 @@
     [optionData]="QuberaData"
     [steper]="1"
     (closeSendQuberaPopupMain)="openQuberaPopup(false)"
+    (getKYCStatus)="getStatusKYC()"
   >
   </app-qubera-popup>
 </div>
