--- a/src/app/funds/balance/qubera-popup/qubera-popup.component.html
+++ b/src/app/funds/balance/qubera-popup/qubera-popup.component.html
@@ -37,6 +37,7 @@
         [steper]="steper"
         [qubera]="optionData"
         (closeSendQuberaPopup)="onCloseSendQuberaPopupMain()"
+        (getKYCStatus)="getStatusKYC()"
       >
       </app-create-fug>
 
