--- a/src/app/funds/balance/refill-money/refill-step-two/refill-step-two.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-step-two.component.html
@@ -6,6 +6,9 @@
 
 <app-refill-fiat
   (closePopup)="closePopup.emit(true)"
+  (goToThirdStep)="goToThird()"
+  (selectQuberaBank)="selectBank()"
+  (hideSteps)="hideStep()"
   [refillData]="refillData"
   *ngIf="choosedName === FIAT_DEPOSIT"
 ></app-refill-fiat>
