--- a/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.scss
+++ b/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.scss
@@ -188,3 +188,12 @@ form .select {
     }
 }
 
+.select-input_label {
+    top: -5px;
+    padding: 0 2px;
+    font-size: 10px;
+    line-height: 12px;
+    z-index: 100;
+    background-color: #fff;
+  }
+
