--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -61,9 +61,9 @@
       </div>
       <div [ngSwitch]="kycStatus">
         <div class="qubera-btn-wr" *ngSwitchCase="'SUCCESS'">
-            <button class="btn btn--active balance__title-btn" (click)="createCurrency.emit(true)" *ngIf="quberaBalance.length < 1">{{'Create Account' | translate}}</button>
+            <button class="btn btn--active balance__title-btn" (click)="createCurrency.emit(true)" *ngIf="quberaBalance.length > 0 && quberaBalance[0] !== undefined">{{'Create Account' | translate}}</button>
         </div>
-        <div class="qubera-btn-wr" *ngSwitchCase="'Failed'">
+        <div class="qubera-btn-wr" *ngSwitchCase="'none'">
           <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Proceed Verification' | translate}}</button>
         </div>
         <!-- если заявка на подтверждении -->
