--- a/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
@@ -79,11 +79,11 @@
             <span class="value-info">{{bankInfo?.bankName}}</span>
           </div>
           <div class="item-info">
-            <span class="key-info">{{'Acсount number' | translate}}</span>
+            <span class="key-info">{{'IBAN' | translate}}</span>
             <span class="value-info">{{bankInfo?.iban}}</span>
           </div>
           <div class="item-info">
-            <span class="key-info">{{'Recipient' | translate}}</span>
+            <span class="key-info">{{'BIC' | translate}}</span>
             <span class="value-info">{{bankInfo?.bic}}</span>
           </div>
           <div class="item-info">
