add murkup for confirm trade deposit

--- a/src/app/funds/balance/refill-money/refill-step-three/refill-step-three.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-three/refill-step-three.component.html
@@ -1,3 +1,16 @@
-<p>
-  refill-step-three works!
-</p>
+<div class="modal__content qubera-content">
+  <div class="fiat-deposit-s1 fiat-withdraw-s1">
+  <h2>{{'Transaction confirmation' | translate}}</h2>
+  <div class="inf-code">{{'Please enter two-factor authentication code that was sent to your email' | translate}}</div>
+
+  <form>
+    <div class="input-block">
+      <input class="wrap-input__input" type="text" name="code" required>
+      <label class="wrap-input__label" for="code">{{'Code' | translate}}</label>
+    </div>
+  </form>
+  <button class="btn btn--center" >
+    {{'Confirm' | translate}}
+  </button>
+</div>
+</div>
