--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -235,11 +235,21 @@
 <div class="loading-container" *ngIf="!activeFiat || !fiatInfoByName">
   <app-loader></app-loader>
 </div>
-
-<div *ngIf="!isEnterData" class="captcha-wrapper">
-  <h6 class="popup__title">{{'Enter the captcha' | translate}}</h6>
-  <re-captcha (resolved)="afterResolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
-  <div class="popup__links-wrap  popup__links-wrap--center">
-    <a class="popup__link" (click)="goToWithdrawal()">{{'Back to withdrawal form' | translate}}</a>
+<ng-container *ngIf="!isEnterData">
+  <div *ngIf="!utilsService.isDevCaptcha(userInfo.username); else devCaptchaTemplate" class="captcha-wrapper">
+    <h6 class="popup__title">{{'Enter the captcha' | translate}}</h6>
+    <re-captcha (resolved)="afterResolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
+    <div class="popup__links-wrap  popup__links-wrap--center">
+      <a class="popup__link" (click)="goToWithdrawal()">{{'Back to withdrawal form' | translate}}</a>
+    </div>
   </div>
-</div>
+</ng-container>
+
+
+<ng-template #devCaptchaTemplate>
+  <div class="captcha-wrapper">
+    <h6 class="popup__title popup_title--dm">{{'Enter the captcha' | translate}}</h6>
+    <h4 class="popup__subtitle popup_title--dm">Captcha emulation for developers and QA</h4>
+    <button class="btn btn--center" (click)="afterResolvedCaptcha($event)">Resolve</button>
+  </div>
+</ng-template>
