--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
@@ -154,6 +154,12 @@
       <!--</div>-->
     </ng-template>
 
+    <ng-template #devCaptchaTemplate>
+      <h6 class="popup__title popup_title--dm">{{'Enter the captcha' | translate}}</h6>
+      <h4 class="popup__subtitle popup_title--dm">Captcha emulation for developers and QA</h4>
+      <button class="btn popup__btn popup__btn--active" (click)="afterResolvedCaptcha($event)">Resolve</button>
+    </ng-template>
+
     <!--Pin Code -->
     <ng-template #pinCodeTemplate>
       <h6 class="popup__title">{{'Log in' | translate}}</h6>
