--- a/src/app/popups/recovery-pass/recovery-pass.component.html
+++ b/src/app/popups/recovery-pass/recovery-pass.component.html
@@ -69,6 +69,12 @@
       </div>
     </ng-template>
 
+    <ng-template #devCaptchaTemplate>
+      <h6 class="popup__title popup_title--dm">{{'Reset password' | translate}}</h6>
+      <h4 class="popup__subtitle popup_title--dm">Captcha emulation for developers and QA</h4>
+      <button class="btn popup__btn popup__btn--active" (click)="resolvedCaptcha($event)">Resolve</button>
+    </ng-template>
+
     <ng-template #emailConfirmLinkTemplate>
       <h6 class="popup__title">{{'Confirm the email' | translate}}</h6>
       <h4 class="popup__subtitle" [innerHtml]="afterCaptchaMessage"></h4>
