--- a/src/app/funds/balance/qubera-popup/withdraw/withdraw.component.html
+++ b/src/app/funds/balance/qubera-popup/withdraw/withdraw.component.html
@@ -28,8 +28,17 @@
           <span class="steps__title">{{'Phone verification' | translate}}</span>
         </a>
       </li>
+      <li class="steps__item" *ngIf="step >= 3"
+          [ngClass]="{'steps__item--current': step === 3}"
+      >
+        <a class="steps__link" (click)="setStep(3)">
+          <span class="steps__number" [ngClass]="{'steps__number--current': step === 3, 'steps__number--valid': step != 3 }">3</span>
+          <span class="steps__number-mob-current">3. {{'Success' | translate}}</span>
+          <span class="steps__title">{{'Success' | translate}}</span>
+        </a>
+      </li>
     </ul>
-    <div class="steps__counter">{{'step' | translate}} <span class="steps__counter-val">{{step}}</span>/ 2</div>
+    <div class="steps__counter">{{'step' | translate}} <span class="steps__counter-val">{{step}}</span>/ 3</div>
   </div>
   <!-- modal header end -->
   
@@ -41,5 +50,10 @@
     </app-step-one-withdraw>
     <app-step-two-withdraw
       *ngIf="step === 2"
+      (nextStep)="nextStep(3)"
     >
     </app-step-two-withdraw>
+    <app-step-three-withdraw
+      *ngIf="step === 3"
+    >
+    </app-step-three-withdraw>
