--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -61,7 +61,7 @@
       </div> -->
       <div [ngSwitch]="kycStatus">
         <div class="qubera-btn-wr" *ngSwitchCase="'SUCCESS'">
-            <button class="btn btn--active balance__title-btn" (click)="createCurrency.emit(true)" *ngIf="quberaBalance.length > 0 && quberaBalance[0] !== undefined">{{'Create Account' | translate}}</button>
+            <button class="btn btn--active balance__title-btn" (click)="createCurrency.emit(true)" *ngIf="balances == null">{{'Create Account' | translate}}</button>
         </div>
         <div class="qubera-btn-wr" *ngSwitchCase="'none'">
           <button class="btn btn--active balance__title-btn" (click)="createFugAccount.emit(true)">{{'Proceed Verification' | translate}}</button>
@@ -102,11 +102,11 @@
 
 
 
-  <div class="qubera-benefits">
-    <div class="ben-head" *ngIf="quberaBalance.length > 0 && quberaBalance[0] == undefined">
+  <div class="qubera-benefits" *ngIf="quberaBalance.length > 0 && quberaBalance[0] == undefined">
+    <div class="ben-head">
       <h6>{{'Benefits' | translate}}</h6>
     </div>
-    <ul class="benefits-list" *ngIf="quberaBalance.length > 0 && quberaBalance[0] == undefined">
+    <ul class="benefits-list">
       <li>
         <svg xmlns="http://www.w3.org/2000/svg" width="15" height="11" viewBox="0 0 15 11" fill="none">
           <rect y="5.53174" width="2.57013" height="7.7104" rx="1" transform="rotate(-45 0 5.53174)" fill="#2560F2"/>
