--- a/src/app/funds/balance/qubera-mob/qubera-mob.component.html
+++ b/src/app/funds/balance/qubera-mob/qubera-mob.component.html
@@ -226,16 +226,16 @@
                   <span><b>0% transfer fee</b> between personal and trading account at Exrates</span></li>
                 </ul>  
               </div>
-              <div class="for-vip">
+              <!-- <div class="for-vip">
                 <h6>For VIP clients</h6>
                 <p>Up to $ 150,000 limit for deposits and withdrawals.</p>
-              </div>
+              </div> -->
               <div class="how-work">
                 <h6>How does it work?</h6>
                 <p>Через ваш акаунт Exrates вы открываете счёт в Банке. Данный счёт является вашим персональным счетом с которого вы можете в любом момент переводить фиат на ваш торговый счёт в Exrates.</p>
               </div>
               <div class="detail-inf">
-                <p>Более детальное описание условий доступно на странице финансового партнёра <a href="#">FUG</a>.</p>
+                <p>Более детальное описание условий доступно на странице финансового партнёра <a href="http://fug.sg">FUG</a>.</p>
               </div>
 
 
