--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -159,7 +159,7 @@
       <p>{{'Through your account Exrates you open an account in the Bank. This account is your personal account from which you can at any time transfer Fiat to your Exrates trading account.' | translate}}</p>
     </div>
     <div class="detail-inf">
-      <p>{{'A more detailed description of the conditions is available on the financial partner page.' | translate}} <a href="#">FUG</a>.</p>
+      <p>{{'A more detailed description of the conditions is available on the financial partner page.' | translate}} <a href="http://fug.sg">FUG</a>.</p>
     </div>
 
 
