--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -150,10 +150,10 @@
         </li>
       </ul>  
     </div>
-    <div class="for-vip">
+    <!-- <div class="for-vip">
       <h6>{{'For VIP clients' | translate}}</h6>
       <p>{{'Up to $ 150,000 limit for deposits and withdrawals.' | translate}}</p>
-    </div>
+    </div> -->
     <div class="how-work">
       <h6>How does it work?</h6>
       <p>{{'Through your account Exrates you open an account in the Bank. This account is your personal account from which you can at any time transfer Fiat to your Exrates trading account.' | translate}}</p>
