--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
@@ -55,6 +55,7 @@
       width: 100%;
       margin-bottom: 0;
       margin-right: 16px;
+      max-width: unset;
     }
     &__wrap-input {
       margin-bottom: 0;
