--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -28,7 +28,7 @@
         (click)="onSelectTab.emit(Tab.FIAT)"
         [disabled]="loading"
       >
-        {{'Fiat' | translate}}
+        {{'Exchange wallet' | translate}}
       </button>
       
 
@@ -38,7 +38,7 @@
         (click)="onSelectTab.emit(Tab.QUBERA)"
         [disabled]="loading"
       >
-        {{'Qubera' | translate}}
+        {{'Funding wallet' | translate}}
       </button>
       
       <button
