fix agreement link

--- a/src/app/funds/balance/qubera-mob/qubera-mob.component.html
+++ b/src/app/funds/balance/qubera-mob/qubera-mob.component.html
@@ -232,7 +232,7 @@
                 <p>Через ваш акаунт Exrates вы открываете счёт в Банке. Данный счёт является вашим персональным счетом с которого вы можете в любом момент переводить фиат на ваш торговый счёт в Exrates.</p>
               </div>
               <div class="detail-inf">
-                <p>Более детальное описание условий доступно на странице финансового партнёра <a href="http://fug.sg">FUG</a>.</p>
+                <p>Более детальное описание условий доступно на странице финансового партнёра <a href="http://fug.sg" target="_blank">FUG</a>.</p>
               </div>
 
 
