--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -343,7 +343,7 @@
     [optionData]="QuberaData"
     [steper]="1"
     (closeSendQuberaPopupMain)="openQuberaPopup(false)"
-    (getKYCStatus)="getStatusKYC()"
+    (getKYCStatus)="getTableAndKYCStatus()"
   >
   </app-qubera-popup>
 </div>
