--- a/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.html
+++ b/src/app/funds/balance/qubera-popup/create-fug/step-one/step-one.component.html
@@ -124,8 +124,8 @@
     <div class="action">
       <button (click)="gotToStepTwo(form)"
       class="btn btn--center"
-      [ngClass]="{'btn--empty-blue': !form.valid || !check}"
-      [disabled]="!form.valid || !check"
+      [ngClass]="{'btn--empty-blue': !form.valid || !check || disable}"
+      [disabled]="!form.valid || !check || disable"
       >{{'Create account' | translate}}</button>
     </div>
 
