--- a/src/app/funds/balance/qubera-popup/qubera-popup.component.html
+++ b/src/app/funds/balance/qubera-popup/qubera-popup.component.html
@@ -45,6 +45,7 @@
         *ngIf="component == 'CREATECURRENCY'"
         [steper]="steper"
         [qubera]="optionData"
+        (getKYCStatus)="getStatusKYC()"
         (closeSendQuberaPopup)="onCloseSendQuberaPopupMain()"
       >
       </app-create-currency>
